# amq-encode

./: .gitignore  LICENSE  README.md  amq_encode.sh  amqencode.py  install.sh  sample_encode.py  setup.cfg  setup.py
bash/: amq_encode.sh  amq_settings.sh
src/amqencode/: __init__.py  __main__.py  audio.py  common.py  encode.py  mux.py  video.py
src/amqencode.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
