[metadata]
name = amqencode
version = 0.1.6
author = ayyu
author_email = ayyu@uwaterloo.ca
description = Encoding utility for Anime Music Quiz
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayyu/amq-encoding
project_urls =
    Bug Tracker = https://github.com/ayyu/amq-encoding/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
  ffmpeg-python

[options.packages.find]
where = src